# backend/docs/swagger.json
@@ -101,6 +101,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Создает новую игру в системе",
                 "consumes": [
                     "application/json"
@@ -201,6 +206,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Обновляет информацию об игре",
                 "consumes": [
                     "application/json"
@@ -258,6 +268,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Удаляет игру из системы по её идентификатору",
                 "consumes": [
                     "application/json"
@@ -353,6 +368,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Создает новый жанр в системе",
                 "consumes": [
                     "application/json"
@@ -453,6 +473,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Обновляет информацию о жанре",
                 "consumes": [
                     "application/json"
@@ -510,6 +535,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Удаляет жанр из системы по его идентификатору",
                 "consumes": [
                     "application/json"
@@ -631,6 +661,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Создает нового пользователя в системе",
                 "consumes": [
                     "application/json"
@@ -731,6 +766,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Обновляет информацию о пользователе",
                 "consumes": [
                     "application/json"
@@ -788,6 +828,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Удаляет пользователя из системы по его идентификатору",
                 "consumes": [
                     "application/json"
@@ -1062,6 +1107,14 @@
                 "RoleUser",
                 "RoleAdmin"
             ]
+        }
+    },
+    "securityDefinitions": {
+        "ApiKeyAuth": {
+            "description": "Введите значение заголовка целиком: \"Bearer \u003cJWT\u003e\"",
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
